istio-manifests/routes/airflow-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow-route
  namespace: airflow
spec:
  parentRefs:
  - name: juicebox-gateway
    namespace: istio-system
  hostnames: 
  - "airflow.juicebox.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: airflow-api-server
      port: 80
