istio-manifests/routes/minio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-route
  namespace: ducklake
spec:
  parentRefs:
  - name: juicebox-gateway
    namespace: istio-system
  hostnames: 
  - "minio.juicebox.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minio-svc
      port: 9000



# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: minio-console
#   namespace: ducklake
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: Host(`minio.homelab.local`)
#       services:
#         - name: minio-svc
#           port: 9001
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: minio-api
#   namespace: ducklake
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: Host(`minio-api.homelab.local`)
#       services:
#         - name: minio-svc
#           port: 9000
